force-app/main/default/objects/E2CP__New_Comment_Action__c/E2CP__New_Comment_Action__c.object-meta.xml
<CustomObject>
    <label>New Comment Action</label>
    <nameField>
        <displayFormat>NCA-{000000}</displayFormat>
        <label>Custom Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Comment Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>