force-app/main/default/objects/E2CP__New_Comment_Action__c/fields/E2CP__Label__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Label__c</fullName>
    <inlineHelpText>The text to be displayed on the button.</inlineHelpText>
    <label>Label</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>