force-app/main/default/objects/E2CP__New_Comment_Action__c/fields/E2CP__Notes__c.field-meta.xml
<CustomField>
    <fullName>E2CP__Notes__c</fullName>
    <label>Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>