force-app/main/default/objects/E2CP__New_Comment_Action__c/fields/E2CP__URL__c.field-meta.xml
<CustomField>
    <fullName>E2CP__URL__c</fullName>
    <inlineHelpText>The URL which the user will be navigated to after the comment is saved in the classic new comment page.</inlineHelpText>
    <label>Classic URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>