force-app/main/default/objects/E2CP__New_Comment_Action__c/listViews/E2CP__All_New_Comment_Actions.listView-meta.xml
<ListView>
    <fullName>E2CP__All_New_Comment_Actions</fullName>
    <columns>NAME</columns>
    <columns>E2CP__Active__c</columns>
    <columns>E2CP__Page_Order__c</columns>
    <columns>E2CP__Label__c</columns>
    <columns>E2CP__Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All New Comment Actions</label>
</ListView>